# aws-bedrock-model-demo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  Taskfile.yml  agentcore_demo.py  bedrock_demo.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: create_agentcore_role.sh  delete_agentcore_harnesses.sh
tests/: test_agentcore_demo.py  test_bedrock_demo.py
