[project]
name = "bedrock-model-demo"
version = "0.1.0"
description = "AWS Bedrock model testing demonstrator"
license = {text = "MPL-2.0"}
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "openai>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.6.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 200
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html --cov-fail-under=80 --ignore=bedrock_demo.py"
